--- a/boilerplates/ds-ml-service/files/docker-prediction/Dockerfile
+++ b/boilerplates/ds-ml-service/files/docker-prediction/Dockerfile
@@ -1,6 +1,7 @@
 FROM registry.access.redhat.com/rhscl/python-36-rhel7
 
 ARG nexusHostWithBasicAuth
+ARG nexusHostWithoutScheme
 
 WORKDIR /app
 
@@ -14,7 +15,7 @@ USER 1001
 
 # Front load pip install for caching docker build layers
 RUN if [[ ! -z ${nexusHostWithBasicAuth} ]]; \
-    then  pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${nexusHostWithBasicAuth}/repository/pypi-all/simple --upgrade pip && pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${nexusHostWithBasicAuth}/repository/pypi-all/simple -r requirements.txt; \
+    then  pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${nexusHostWithoutScheme} --upgrade pip && pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${nexusHostWithoutScheme} -r requirements.txt; \
     else pip install --upgrade pip && pip install -r requirements.txt; \
     fi
 
