--- a/boilerplates/ds-ml-service/files/docker-training/Dockerfile
+++ b/boilerplates/ds-ml-service/files/docker-training/Dockerfile
@@ -9,6 +9,7 @@ ENV PYTHONPATH=$PYTHONPATH:/app
 ENV DSI_PACKAGE=/app/app.tar.gz
 
 ARG nexusHostWithBasicAuth
+ARG nexusHostWithoutScheme
 
 # Front load pip install, miniconda download for caching docker build layers
 COPY dist/requirements.txt /app
@@ -20,7 +21,7 @@ RUN curl --silent --fail https://repo.anaconda.com/miniconda/Miniconda3-${DSI_MI
 USER 1001
 
 RUN if [[ ! -z ${nexusHostWithBasicAuth} ]]; \
-    then  pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${nexusHostWithBasicAuth}/repository/pypi-all/simple --upgrade pip && pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${nexusHostWithBasicAuth}/repository/pypi-all/simple -r requirements.txt; \
+    then  pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${nexusHostWithoutScheme} --upgrade pip && pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${nexusHostWithoutScheme} -r requirements.txt; \
     else pip install --upgrade pip && pip install -r requirements.txt; \
     fi
 
