--- a/boilerplates/be-python-flask/Jenkinsfile
+++ b/boilerplates/be-python-flask/Jenkinsfile
@@ -17,10 +17,10 @@ library identifier: 'ods-library@1.1.x', retriever: modernSCM(
 /*
   See readme of shared library for usage and customization
   @ https://github.com/opendevstack/ods-jenkins-shared-library/blob/master/README.md
-  eg. to create and set your own builder slave instead of 
+  eg. to create and set your own builder slave instead of
   the python slave used here - the code of the python slave can be found at
   https://github.com/opendevstack/ods-project-quickstarters/tree/master/jenkins-slaves/python
- */ 
+ */
 odsPipeline(
   image: "${dockerRegistry}/cd/jenkins-slave-python",
   projectId: projectId,
@@ -31,7 +31,7 @@ odsPipeline(
   ]
 ) { context ->
   stageBuild(context)
-  stageStartOpenshiftBuild(context, [nexusHostWithBasicAuth: context.nexusHostWithBasicAuth])
+  stageStartOpenshiftBuild(context, [nexusHostWithBasicAuth: context.nexusHostWithBasicAuth, nexusHostWithoutScheme: context.nexusHost.tokenize('//')[1]])
   stageDeployToOpenshift(context)
 }
 
