--- a/boilerplates/fe-angular/files/package.json
+++ b/boilerplates/fe-angular/files/package.json
@@ -40,7 +40,9 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "rxjs-tslint": "^0.1.6",
     "ts-node": "~7.0.0",
+    "tslint-sonarts": "^1.9.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   }
