--- a/rundeck-jobs/common/prepare-continuous-integration-qs-38.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration-qs-38.yaml
@@ -51,13 +51,21 @@
   sequence:
     commands:
     - description: clone quickstarter project - origin/task/tailor-for-update-templates
-      exec: mkdir /tmp/rundeck_${job.id}_${job.execid} && cd  /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters && git checkout origin/task/tailor-for-update-templates
+      script: |-
+        mkdir "/tmp/rundeck_@job.id@_@job.execid@"
+        cd "/tmp/rundeck_@job.id@_@job.execid@"
+        git clone @globals.bitbucket_sshhost@/opendevstack/ods-project-quickstarters.git
+        cd ods-project-quickstarters
+        # Here the branch can be changed for testing purposes
+        git checkout origin/task/tailor-for-update-templates
     - description: setup openshift folder in generated project if not provided.
       # This is used by the shared library to call  tailor to create/update OpenShift resources.
       script: |-
         cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/
+        # env variables must be on same line as invoked command.
         PROJECT="@option.project_id@" \
         COMPONENT="@option.component_id@" \
+        COMPONENT_TYPE="option.component_type@" \
         TARGET_DIR="@option.quickstarter_directory@" \
         /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates/init-openshift.sh
     - description: add Jenkinsfile to generated project
@@ -80,7 +88,7 @@
           --project-id @option.project_id@ \
           --component-id @option.component_id@  \
           --component-type @option.component_type@
-    - description: push repository to github
+    - description: Push to Bitbucket
       exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/boilerplates && ./git_push.sh --dir ${option.quickstarter_directory} --url ${option.git_url_ssh}
     keepgoing: false
     strategy: node-first
