--- a/rundeck-jobs/common/prepare-continuous-integration.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration.yaml
@@ -21,6 +21,7 @@
     - fe-ionic
     - fe-react
     - be-docker-plain
+    - be-golang
   - description: location of the generated quickstarter project
     name: quickstarter_directory
     required: true
