--- a/boilerplates/fe-vue/Dockerfile
+++ b/boilerplates/fe-vue/Dockerfile
@@ -1,5 +1,7 @@
 FROM cd/jenkins-slave-nodejs8-angular
 
+LABEL maintainer="Akhil Soman <akhil.soman@boehringer-ingelheim.com>"
+
 ARG VUE_CLI_VERSION=3.4.0
 
 RUN npm install -g @vue/cli@$VUE_CLI_VERSION && \
