move from rhel to alpine

--- a/boilerplates/be-docker-plain/files/docker/Dockerfile
+++ b/boilerplates/be-docker-plain/files/docker/Dockerfile
@@ -1,5 +1,5 @@
 # add /overwrite FROM with your base image, and do whatever you like here :)
-FROM registry.access.redhat.com/rhel7
+FROM alpine:latest
 
 RUN echo "building simple container"
 
