--- a/boilerplates/be-docker-plain/files/docker/Dockerfile
+++ b/boilerplates/be-docker-plain/files/docker/Dockerfile
@@ -4,3 +4,5 @@ FROM alpine:latest
 RUN echo "building simple container"
 
 EXPOSE 8080
+
+CMD ["/bin/sh", "-c", "/usr/bin/nc -lk -p 8080 -e echo -e \"HTTP/1.1 200 OK\n\nHello World!\n$(date)\""]
