--- a/boilerplates/be-docker-plain/files/docker/Dockerfile
+++ b/boilerplates/be-docker-plain/files/docker/Dockerfile
@@ -1,6 +1,8 @@
 # add /overwrite FROM with your base image, and do whatever you like here :)
-FROM registry.access.redhat.com/rhel7
+FROM alpine:latest
 
 RUN echo "building simple container"
 
 EXPOSE 8080
+
+CMD ["/bin/sh", "-c", "/usr/bin/nc -lk -p 8080 -e echo -e \"HTTP/1.1 200 OK\n\nHello World!\n$(date)\""]
