--- a/boilerplates/ds-ml-service/Jenkinsfile
+++ b/boilerplates/ds-ml-service/Jenkinsfile
@@ -8,14 +8,8 @@ def trainingRoute
 def trainingPodInfo
 def trainingPassword
 def trainingUsername
-
-def trainingConfig = [
-    "docker-training"  : "${componentId}-training-service",
-]
-
-def predictionConfig = [
-    "docker-prediction": "${componentId}-prediction-service"
-]
+def trainingConfig = "${componentId}-training-service"
+def predictionConfig = "${componentId}-prediction-service"
 
 node {
     sharedLibraryRepository = env.SHARED_LIBRARY_REPOSITORY
@@ -40,40 +34,38 @@ odsPipeline(
 ) { context ->
     stageScanForSonarqube(context)
     stageBuild(context)
-    stageStartMultipleOpenshiftBuild(context, "Build Training Image" ,trainingConfig)
-    stageMultipleDeployToOpenshift(context, "Deploy Training Pod", trainingConfig)
+    stageCustomStartOpenshiftBuild(context, "Build Training Image" ,trainingConfig)
+    stageCustomDeployToOpenshift(context, "Deploy Training Pod", trainingConfig)
     stageUnitTestsTraining(context)
     stageTraining(context)
     stageIntegrationTestTraining(context)
-    stageStartMultipleOpenshiftBuild(context, "Build Prediction Image", predictionConfig)
-    stageMultipleDeployToOpenshift(context, "Deploy Prediction Pod", predictionConfig)
+    stageCustomStartOpenshiftBuild(context, "Build Prediction Image", predictionConfig)
+    stageCustomDeployToOpenshift(context, "Deploy Prediction Pod", predictionConfig)
 }
 
 def stageLinter(def context) {
     stage('Linter') {
         // PEP8
         sh '''
-pycodestyle --show-source --show-pep8 src/*
-pycodestyle --statistics -qq src/*
-  '''
+        pycodestyle --show-source --show-pep8 src/*
+        pycodestyle --statistics -qq src/*
+        '''
     }
 }
 
+def stageBuild(def context) {
+    stage('Prepare Docker Builds') {
+        sh './build.sh'
+    }
+}
 
 def stageUnitTestsTraining(def context) {
     stage('Unittests') {
         trainingPodInfo = sh(returnStdout: true, script:"sleep 5 && oc get pods --sort-by=.status.startTime --no-headers -n ${context.targetProject} | grep ${context.componentId}-training-service | tail -n1").trim().split(/\s+/)
         print("Found pod name: ${trainingPodInfo[0]}")
         if (trainingPodInfo[2] == "Running") {
-            sh(returnStdout: true, script: " oc project ${context.targetProject} && oc exec ${trainingPodInfo[0]} bash ./run_unittests.sh ")
+            sh(returnStdout: true, script: "oc exec ${trainingPodInfo[0]} bash ./run_unittests.sh -n ${context.targetProject}")
         }
-    }
-}
-
-
-def stageBuild(def context) {
-    stage('Prepare Docker Builds') {
-        sh './build.sh'
     }
 }
 
@@ -90,84 +82,79 @@ def stageTraining(def context) {
 
         sh "oc port-forward ${trainingPodInfo[0]} 8080 -n ${context.targetProject} &"
         // wait for port-forward to map the ports or for 10s
-	    sh "timeout 10s bash -c 'until ! curl -v --silent http://localhost:8080 2>&1 | grep -m 1 \"Connection refused\"; do sleep 1 ; done'; echo -e \\\\a"
-        sh  "python3 jenkinsfile_helper.py --training-service ${trainingRoute} --username \"${trainingUsername}\" --password \"${trainingPassword}\""
+        sh "timeout 10s bash -c 'until ! curl -v --silent http://localhost:8080 2>&1 | grep -m 1 \"Connection refused\"; do sleep 1 ; done'; echo -e \\\\a"
+        // trigger model training
+        sh "python3 jenkinsfile_helper.py --training-service ${trainingRoute} --username \"${trainingUsername}\" --password \"${trainingPassword}\""
+        // get the model for the prediction build
+        sh "curl -Lv --user \"${trainingUsername}\":\"${trainingPassword}\" \"${trainingRoute}\"/getmodel -o docker/dist/\"${context.getGitCommit()}\""
     }
 }
-
 
 def stageIntegrationTestTraining(def context) {
     stage('Integration Tests') {
         trainingPodInfo = sh(returnStdout: true, script:"sleep 5 && oc get pods --sort-by=.status.startTime --no-headers -n ${context.targetProject} | grep ${context.componentId}-training-service | tail -n1").trim().split(/\s+/)
         print("Found pod name: ${trainingPodInfo[0]}")
         if (trainingPodInfo[2] == "Running") {
-            sh(returnStdout: true, script: " oc project ${context.targetProject} && oc exec ${trainingPodInfo[0]} bash ./run_integration_tests.sh ")
+            sh(returnStdout: true, script: "oc -n ${context.targetProject} exec ${trainingPodInfo[0]} bash ./run_integration_tests.sh")
         }
         print("Pod ${trainingPodInfo[0]} is not running... cannot execute integration tests")
     }
 }
 
-
-def stageStartMultipleOpenshiftBuild(def context, def stageName, def buildConfigs = null) {
-    if (buildConfigs != null) {
-        stage(stageName) {
-            if (!context.environment) {
-                println("Skipping for empty environment ...")
-                return
-            }
-            buildConfigs.each { dockerFolder, buildConfig ->
-                timeout(context.openshiftBuildTimeout) {
-                    patchBuildConfig(context, buildConfig)
-                    sh "oc start-build  --from-dir ${dockerFolder} --follow -n ${context.targetProject} " +
-                    "${buildConfig}"
-                }
-            }
+def stageCustomStartOpenshiftBuild(def context, def stageName, def buildConfig) {
+    stage(stageName) {
+        if (!context.environment) {
+            println("Skipping for empty environment ...")
+            return
         }
-    } else {
-        stageStartOpenshiftBuild(context)
+        timeout(context.openshiftBuildTimeout) {
+            patchBuildConfig(context, buildConfig)
+            sh "oc start-build ${buildConfig} --from-dir docker --follow -n ${context.targetProject}"
+        }
     }
 }
 
-private void patchBuildConfig(def context, def componentId = null) {
-    sh """oc patch bc ${componentId ?: context.componentId} --type=json --patch '[
+private void patchBuildConfig(def context, def componentId) {
+    def splitComponentId = componentId.tokenize('-')
+    sh """oc patch bc ${componentId} --type=json --patch '[
     {"op": "replace", "path": "/spec/source", "value":{"type":"Binary"}},
-    {"op": "replace", "path": "/spec/output/to/name", "value":"${componentId ?: context.componentId}:${
-        context.tagversion
-    }"},
+    {"op": "replace", "path": "/spec/output/to/name", "value":"${componentId}:${context.tagversion}"},
     {"op": "replace", "path": "/spec/strategy/dockerStrategy", "value":{"buildArgs":[
             {"name": "nexusHostWithBasicAuth" ,"value": "${context.nexusHostWithBasicAuth}"},
-            {"name": "nexusHostWithoutScheme" ,"value": "${context.nexusHost.tokenize('//')[1]}"}
+            {"name": "nexusHostWithoutScheme" ,"value": "${context.nexusHost.tokenize('//')[1]}"},
+            {"name": "serviceType" ,"value": "${splitComponentId[ splitComponentId.size() - 2 ]}"}
         ]}},
     ]' -n ${context.targetProject}"""
 }
 
-def stageMultipleDeployToOpenshift(def context, def stageName, def buildConfigs = null) {
-    if (buildConfigs != null) {
-        stage(stageName) {
-            if (!context.environment) {
-                println("Skipping for empty environment ...")
-                return
-            }
-            buildConfigs.each { dockerFolder, buildConfig ->
-                openshiftTag(
-                        srcStream: buildConfig,
-                        srcTag: context.tagversion,
-                        destStream: buildConfig,
-                        destTag: "latest",
-                        namespace: context.targetProject
-                )
-            }
+def stageCustomDeployToOpenshift(def context, def stageName, def buildConfig) {
+    stage(stageName) {
+        if (!context.environment) {
+            println("Skipping for empty environment ...")
+            return
         }
-    } else {
-        stageDeployToOpenshift(context)
+        openshiftTag(
+            srcStream: buildConfig,
+            srcTag: context.tagversion,
+            destStream: buildConfig,
+            destTag: "latest",
+            namespace: context.targetProject
+        )
     }
-    while(true) {
-    trainingPodInfo = sh(returnStdout: true, script:"sleep 5 && oc get pods --sort-by=.status.startTime --no-headers -n ${context.targetProject} | grep ${context.componentId}-training-service | tail -n1").trim().split(/\s+/)
-    print("Found pod name: ${trainingPodInfo[0]}")
-    if (trainingPodInfo[2] == "Running") {
-        print("Pod ${trainingPodInfo[0]} is running!!!")
-        break
-    }
-    print("Pod ${trainingPodInfo[0]} is still not running...")
+    waitForTrainingPod(context, buildConfig)
+}
+
+def waitForTrainingPod(def context, def buildConfig) {
+    if(buildConfig.contains('training')) {
+        print("Waiting for training pod to be running...")
+        while(true) {
+            trainingPodInfo = sh(returnStdout: true, script:"sleep 5 && oc get pods --sort-by=.status.startTime --no-headers -n ${context.targetProject} | grep ${context.componentId}-training-service | tail -n1").trim().split(/\s+/)
+            print("Found pod name: ${trainingPodInfo[0]}")
+            if (trainingPodInfo[2] == "Running") {
+                print("Pod ${trainingPodInfo[0]} is running!!!")
+                break
+            }
+            print("Pod ${trainingPodInfo[0]} is still not running...")
+        }
     }
 }
