--- a/ocp-templates/ocp-config/component-route/route.yml
+++ b/ocp-templates/ocp-config/component-route/route.yml
@@ -2,16 +2,8 @@ apiVersion: v1
 kind: Template
 labels:
   template: component-route-template
-  app: ${PROJECT}
-  component: ${COMPONENT}
-  env: ${ENV}
+  app: '${PROJECT}-${COMPONENT}'
 metadata:
-  annotations:
-    description: |-
-      This templates performs the setup or a route for a component.
-    iconClass: icon-nodejs
-    openshift.io/display-name: Component Template
-    template.openshift.io/long-description: This template defines a route for a component.
   name: component-route
 objects:
   - apiVersion: v1
