Raise Java version in be-springboot to 11

--- a/boilerplates/be-springboot/templates/build-4.10.gradle
+++ b/boilerplates/be-springboot/templates/build-4.10.gradle
@@ -22,7 +22,7 @@ apply plugin: 'io.spring.dependency-management'
 
 group = '__GROUP__'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
 	maven () {
