--- a/boilerplates/fe-angular/files/package.json
+++ b/boilerplates/fe-angular/files/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --build-optimizer --progress=false",
-    "test": "ng test --watch=false --progress=false --code-coverage",
+    "test": "ng test --watch=false --progress=false --code-coverage --reporters=junit",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -39,6 +39,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-junit-reporter": "^1.2.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint-sonarts": "^1.9.0",
