be-python-flask testResults to src/tests #299

--- a/boilerplates/be-python-flask/Jenkinsfile
+++ b/boilerplates/be-python-flask/Jenkinsfile
@@ -25,6 +25,7 @@ odsPipeline(
   image: "${dockerRegistry}/cd/jenkins-slave-python",
   projectId: projectId,
   componentId: componentId,
+  testResults : 'src/tests',
   branchToEnvironmentMapping: [
     'master': 'test',
     '*': 'dev'
