switch to centos, volume/persistance enablement and extension management

--- a/boilerplates/jupyter-notebook/files/docker/Dockerfile
+++ b/boilerplates/jupyter-notebook/files/docker/Dockerfile
@@ -1,17 +1,19 @@
 # This image provides a jupyter notebook setup
 
-FROM registry.access.redhat.com/rhscl/python-36-rhel7
+FROM centos/python-36-centos7
 
 LABEL maintainer="Stefan Klingelschmitt <stefan.klingelschmitt@boehringer-ingelheim.com>"
 
 ARG nexusHostWithBasicAuth
 ARG nexusHostWithoutScheme
 
-WORKDIR /app
+WORKDIR /opt/app-root/src
 
-ENV PYTHONPATH=$PYTHONPATH:/app
+ENV PYTHONPATH=$PYTHONPATH:/opt/app-root/src \
+    NPM_CONFIG_PREFIX=/opt/app-root \
+    NODE_OPTIONS=--max-old-space-size=4096
 
-COPY requirements.txt /app
+COPY requirements.txt /opt/app-root/src
 
 USER 1001
 # From load pip install for caching docker build layers
@@ -20,21 +22,23 @@ RUN if [ ! -z ${nexusHostWithBasicAuth} ]; \
     else pip install --upgrade pip && pip install -r requirements.txt; \
     fi
 
-
 USER root
 
-COPY run.sh /app/run.sh
+COPY run.sh /opt/app-root/run.sh
 COPY jupyter_notebook_config.json /opt/app-root/src/.jupyter/jupyter_notebook_config.json
 
-RUN chgrp -R 0 /app && \
-    chmod -R g=u /app && \
-    chmod +x /app/run.sh && \
-    chmod g+w /etc/passwd
+RUN chown -R 1001 /opt/app-root/src && \
+    chgrp -R 0 /opt/app-root/src && \
+    chmod -R g=u /opt/app-root/src && \
+    chmod +x /opt/app-root/run.sh && \
+    chmod g+w /etc/passwd && \
+    chmod -R g+w /opt/app-root/share && \
+    chmod -R g+w /opt/app-root/src
 
 USER 1001
 
-
 EXPOSE 8080
 
-ENTRYPOINT [ "/app/run.sh" ]
+ENTRYPOINT [ "/opt/app-root/run.sh" ]
 
+CMD [ "jupyter", "lab" ]
