updated documentation for quickstarters and slaves

--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -2,5 +2,6 @@ name: ods-project-quickstarters
 title: ODS Project Quickstarters
 version: latest
 nav: 
+- modules/jenkins-slaves/nav.adoc
 - modules/ROOT/nav.adoc
 
