--- a/boilerplates/be-springboot/Jenkinsfile
+++ b/boilerplates/be-springboot/Jenkinsfile
@@ -17,10 +17,10 @@ library identifier: 'ods-library@production', retriever: modernSCM(
 /*
   See readme of shared library for usage and customization
   @ https://github.com/opendevstack/ods-jenkins-shared-library/blob/master/README.md
-  eg. to create and set your own builder slave instead of 
+  eg. to create and set your own builder slave instead of
   the maven/gradle slave used here - the code of the slave can be found at
   https://github.com/opendevstack/ods-project-quickstarters/tree/master/jenkins-slaves/maven
- */ 
+ */
 odsPipeline(
   image: "${dockerRegistry}/cd/jenkins-slave-maven",
   projectId: projectId,
@@ -32,6 +32,10 @@ odsPipeline(
 ) { context ->
   stageBuild(context)
   stageScanForSonarqube(context)
+
+  //Enable following line if you want to upload your artifact to nexus
+  //stageUploadToNexus(context)
+
   stageStartOpenshiftBuild(context)
   stageDeployToOpenshift(context)
 }
@@ -53,3 +57,21 @@ def stageBuild(def context) {
     }
   }
 }
+
+def stageUploadToNexus(def context) {
+  def javaOpts = "-Xmx512m"
+  def springBootEnv = context.environment
+  if (springBootEnv.contains('-dev')) {
+    springBootEnv = 'dev'
+  }
+  stage('UploadArtifact') {
+    withEnv(["TAGVERSION=${context.tagversion}", "NEXUS_HOST=${context.nexusHost}", "NEXUS_USERNAME=${context.nexusUsername}", "NEXUS_PASSWORD=${context.nexusPassword}", "JAVA_OPTS=${javaOpts}","ENVIRONMENT=${springBootEnv}"]) {
+      def deployStatus = sh(script: "./gradlew publish --stacktrace --no-daemon", returnStatus: true)
+      if (deployStatus != 0) {
+        error "Deployment to nexus failed!"
+      }
+    }
+  }
+}
+
+
