Avoid disclosure of credentials
The changes involve credentials which are explicitly available in scripts
with dedicated parameters or other context variables which carry:
- password arguments
- generated secrets
- openshift api tokens.

A. Changes made in rundeck jobs:

- Echo of `${option.openshift_api_token}` either replaced
  with `<blinded>` or removed.
- Not using `set -x` (tracing) to avoid disclosure in executed commands.

NOTE:  Executing rundeck scripts with *Log level* `Debug` traces all
commands anyhow, which discloses secrets in the environment variables.

B. Reviewed boilerplates scripts and updated them:

- Not using `set -x` (tracing) in areas where otherwise creds would be
  disclosed.

C. Updated shared scripts in ocp-templates/scripts:

- Not using `set -x` (tracing) in areas where otherwise creds would be
  disclosed.

- Echo credentials as `<blinded>` as was already done in other places.

--- a/rundeck-jobs/common/verify global rundeck settings.yaml
+++ b/rundeck-jobs/common/verify global rundeck settings.yaml
@@ -16,7 +16,7 @@
   sequence:
     commands:
     - description: echo input parameters
-      exec: 'echo openshift_api_token: bb${option.openshift_api_token}bb host: ${globals.openshift_apihost}'
+      exec: 'echo "openshift_api_token: <blinded> host: ${globals.openshift_apihost}"'
     - description: verify openshift registry access
       exec: sudo docker login -u ${globals.openshift_user} -p ${option.openshift_api_token} ${globals.openshift_dockerregistry}
     - description: Pull and tag jenkins slave
