--- a/rundeck-jobs/openshift/create-rshiny.yaml
+++ b/rundeck-jobs/openshift/create-rshiny.yaml
@@ -61,7 +61,7 @@
         sudo docker build -f Dockerfile-with-config --build-arg OC_IP=@globals.openshift_apihost_lookup@ -t oc-cfg .
     - description: create openshift rshiny app cd project
       script: |-
-        set -eux
+        set -eu # not using -x (tracing) to avoid disclosure of passwords/tokens
         cd "/tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/ocp-templates"
         sudo docker run --rm oc-cfg /bin/bash -c 'oc login @globals.openshift_apihost@ --token=@option.openshift_api_token@ && oc project cd && ./create-rshiny-app.sh -p @option.project_id@ -c "@option.component_id@" '
     keepgoing: false
