--- a/rundeck-jobs/quickstarts/airflow.yaml
+++ b/rundeck-jobs/quickstarts/airflow.yaml
@@ -34,7 +34,7 @@
     commands:
     - description: Printing input information
       script: |-
-        echo "openshift_api_token: @option.openshift_api_token@"
+        echo "openshift_api_token: <blinded>"
         echo "project_id: @opoption.project_id@"
         echo "component_id: @option.component_id@"
         echo "git_url_http: @option.git_url_https@"
@@ -62,7 +62,6 @@
         sudo docker build --build-arg OC_IP="@globals.openshift_apihost_lookup@" -t oc .
     - description: Create components
       script: |-
-        echo "Token --> @option.openshift_api_token@"
         cd "/tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/ocp-templates"
         sudo docker run \
         -v /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/:/ods-project-quickstarters \
