--- a/rundeck-jobs/quickstarts/be_python_flask.yaml
+++ b/rundeck-jobs/quickstarts/be_python_flask.yaml
@@ -31,9 +31,9 @@
   scheduleEnabled: true
   sequence:
     commands:
-    - exec: 'echo openshift_api_token: ${option.openshift_api_token} project_id: ${option.project_id},  component_id:
+    - exec: 'echo "openshift_api_token: <blinded> project_id: ${option.project_id},  component_id:
         ${option.component_id}, git_url_http: ${option.git_url_https}, git_url_ssh:
-        ${option.git_url_ssh}, package_name: ${option.package_name}'
+        ${option.git_url_ssh}, package_name: ${option.package_name}"'
     - description: checkout quickstart
       exec: mkdir /tmp/rundeck_${job.id}_${job.execid} && cd  /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters && git checkout origin/production
     - description: init python flask project
