--- a/rundeck-jobs/openshift/create-component.yaml
+++ b/rundeck-jobs/openshift/create-component.yaml
@@ -62,14 +62,14 @@
         cp -r           ods-project-quickstarters/ocp-templates/ocp-config docker/ods-project-quickstarters/ocp-templates
         mkdir -p docker/ods-project-quickstarters/ocp-templates/scripts
         cp -r           ods-project-quickstarters/ocp-templates/scripts docker/ods-project-quickstarters/ocp-templates
-        cp ods-project-quickstarters/ocp-templates/Dockerfile docker/
+        cp ods-project-quickstarters/ocp-templates/Dockerfile-with-config docker/
         cd docker
-        sudo docker build --build-arg OC_IP=@globals.openshift_apihost_lookup@ -t oc .
+        sudo docker build -f Dockerfile-with-config --build-arg OC_IP=@globals.openshift_apihost_lookup@ -t oc-cfg .
     - description: create openshift components within projects
       script: |-
         echo "Token --> @option.openshift_api_token@"
         cd "/tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/ocp-templates"
-        sudo docker run --rm oc /bin/bash -c 'oc login @globals.openshift_apihost@ --token=@option.openshift_api_token@ && oc project cd && ./create-component.sh -p @option.project_id@ -c "@option.component_id@" -r @option.route@ -ne "@globals.nexus_host@"'
+        sudo docker run --rm oc-cfg /bin/bash -c 'oc login @globals.openshift_apihost@ --token=@option.openshift_api_token@ && oc project cd && ./create-component.sh -p @option.project_id@ -c "@option.component_id@" -r @option.route@ -ne "@globals.nexus_host@"'
     keepgoing: false
     strategy: node-first
   uuid: d905990c-3b74-4a27-9d49-8a63c0a6989f
