--- a/rundeck-jobs/openshift/create-projects.yaml
+++ b/rundeck-jobs/openshift/create-projects.yaml
@@ -51,14 +51,14 @@
         cp -r           ods-project-quickstarters/ocp-templates/ocp-config docker/ods-project-quickstarters/ocp-templates
         mkdir -p docker/ods-project-quickstarters/ocp-templates/scripts
         cp -r           ods-project-quickstarters/ocp-templates/scripts docker/ods-project-quickstarters/ocp-templates
-        cp ods-project-quickstarters/ocp-templates/Dockerfile docker/
+        cp ods-project-quickstarters/ocp-templates/Dockerfile-with-config docker/
         cd docker
-        sudo docker build --build-arg OC_IP=@globals.openshift_apihost_lookup@ -t oc .
+        sudo docker build -f Dockerfile-with-config --build-arg OC_IP=@globals.openshift_apihost_lookup@ -t oc-cfg .
     - description: create openshift projects (dev / test / cd with jenkins)
       script: |-
         set -eux
         cd "/tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/ocp-templates"
-        sudo docker run --rm oc /bin/bash -c 'oc login @globals.openshift_apihost@ --token=@option.openshift_api_token@ && ./create-projects.sh -p @option.project_id@ -n @globals.nexus_host@ -a @option.project_admin@ -e @option.project_groups@'
+        sudo docker run --rm oc-cfg /bin/bash -c 'oc login @globals.openshift_apihost@ --token=@option.openshift_api_token@ && ./create-projects.sh -p @option.project_id@ -n @globals.nexus_host@ -a @option.project_admin@ -e @option.project_groups@'
     keepgoing: false
     strategy: node-first
   uuid: 00f767ef-347f-480e-8ad3-bf2aed3abf5d
