--- a/rundeck-jobs/openshift/create-rshiny.yaml
+++ b/rundeck-jobs/openshift/create-rshiny.yaml
@@ -56,14 +56,14 @@
         cp -r           ods-project-quickstarters/ocp-templates/ocp-config docker/ods-project-quickstarters/ocp-templates
         mkdir -p docker/ods-project-quickstarters/ocp-templates/scripts
         cp -r           ods-project-quickstarters/ocp-templates/scripts docker/ods-project-quickstarters/ocp-templates
-        cp ods-project-quickstarters/ocp-templates/Dockerfile docker/
+        cp ods-project-quickstarters/ocp-templates/Dockerfile-with-config docker/
         cd docker
-        sudo docker build --build-arg OC_IP=@globals.openshift_apihost_lookup@ -t oc .
+        sudo docker build -f Dockerfile-with-config --build-arg OC_IP=@globals.openshift_apihost_lookup@ -t oc-cfg .
     - description: create openshift rshiny app cd project
       script: |-
         set -eux
         cd "/tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/ocp-templates"
-        sudo docker run --rm oc /bin/bash -c 'oc login @globals.openshift_apihost@ --token=@option.openshift_api_token@ && oc project cd && ./create-rshiny-app.sh -p @option.project_id@ -c "@option.component_id@" '
+        sudo docker run --rm oc-cfg /bin/bash -c 'oc login @globals.openshift_apihost@ --token=@option.openshift_api_token@ && oc project cd && ./create-rshiny-app.sh -p @option.project_id@ -c "@option.component_id@" '
     keepgoing: false
     strategy: node-first
   uuid: ba36276e-5018-47b7-8f3f-9ec8e648d04f
