Unit test results ouptuts with Junit XML , see https://github.com/opendevstack/ods-project-quickstarters/issues/299

--- a/boilerplates/fe-vue/Jenkinsfile
+++ b/boilerplates/fe-vue/Jenkinsfile
@@ -42,9 +42,13 @@ def stageBuild(def context) {
 }
 
 def stageUnitTest(def context) {
+  try {
     stage('Unit Test') {
       sh "npm run test:unit"
     }
+  } finally {
+    junit 'build/test-results/test/test-results.xml'
+  }
 }
 
 def stageLint(def context) {
