--- a/boilerplates/fe-vue/files/package.json
+++ b/boilerplates/fe-vue/files/package.json
@@ -8,7 +8,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit --reporter mocha-multi --reporter-options 'dot=-,xunit=build/test-results/test/test-results.xml'"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -38,7 +38,8 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.2.1",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "mocha-multi": "^1.1.3"
   },
   "eslintConfig": {
     "root": true,
